--- a/src/app/widgets/product-lookup/product-lookup.component.html
+++ b/src/app/widgets/product-lookup/product-lookup.component.html
@@ -15,8 +15,9 @@
            (hide)="onHide()"
            [requestForOption]="requestForProduct.bind(this)"
            [itemTemplate]="itemTemplate">
-  <ng-template #itemTemplate let-item="item">    
-    <div>{{item.name}} ({{item.uom}})</div>
+  <ng-template #itemTemplate let-item="item">
+    <div *ngIf="!!item.uom">{{item.name}} ({{item.uom}})</div>
+    <div *ngIf="!item.uom">{{item.name}}</div>
     <div style="color: grey; margin-top: 8px">{{item.no}}</div>
   </ng-template>  
 </typeahead>
