--- a/src/app/widgets/toolbar/toolbar.component.scss
+++ b/src/app/widgets/toolbar/toolbar.component.scss
@@ -1,9 +1,9 @@
 .toolbar {
   margin-bottom: 8px;
 
-  .mat-toolbar {    
+  .mat-toolbar {
     height: 40px !important;
-    background-color: #c69999;
+    background-color: #5d96ba;
     justify-content: space-between;
     padding: 0 8px !important;
 
