--- a/src/app/product/components/product-search/product-search.component.html
+++ b/src/app/product/components/product-search/product-search.component.html
@@ -28,7 +28,7 @@
     </div>
   </div>
   <div class="actions">
-    <button mat-flat-button (click)="doCancel()">Hủy (Esc)</button>
-    <button mat-flat-button color="primary" (click)="doSearch()">Tìm (F4)</button>
+    <button mat-flat-button (click)="clear()">Xóa</button>
+    <button mat-flat-button color="primary" (click)="doSearch()">Tìm (F9)</button>
   </div>
 </div>
