--- a/src/app/product/components/product/product.component.html
+++ b/src/app/product/components/product/product.component.html
@@ -12,8 +12,8 @@
     </div>
     <div class="sixteen wide column">
       <mat-form-field>
-        <input matInput placeholder="Tên SP" [(ngModel)]="product.name" required name="name">
-        <mat-error *ngIf="hasError('name')">
+        <input matInput placeholder="Tên SP" [(ngModel)]="product.name" required>
+        <mat-error>
           Vui lòng nhập tên sản phẩm
         </mat-error>
       </mat-form-field>
@@ -76,7 +76,6 @@
     </div>
   </div>
   <div class="actions">
-    <button mat-flat-button (click)="doCancel()">Hủy (Esc)</button>
-    <button mat-flat-button color="primary" (click)="save()">Lưu (F4)</button>
+    <button mat-flat-button color="primary" (click)="save()">Lưu (F9)</button>
   </div>
 </div>
