--- a/src/app/widgets/flyout/flyout.component.scss
+++ b/src/app/widgets/flyout/flyout.component.scss
@@ -14,5 +14,14 @@
     button {
       margin-right: 8px;
     }
-  }  
+  }
+
+  .close {
+    color: #bc2f2f;
+    position: absolute;
+    right: 4px;
+    top: 4px;
+    cursor: pointer;
+    z-index: 2;
+  }
 }
