--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,10 +39,18 @@
     margin-top: 16px;
     display: flex;
     justify-content: flex-end;
+
+    button:not(:first-child) {
+      margin-left: 8px;
+    }
   }
 }
 
 .mat-progress-bar-fill::after {
-  background-color: #68bcdd !important;
+  background-color: #ba5d5d !important;
+}
+
+.autoflow {
+  overflow: auto;
 }
 
