--- a/src/app/retail/components/add-customer-dialog/add-customer-dialog.component.html
+++ b/src/app/retail/components/add-customer-dialog/add-customer-dialog.component.html
@@ -1,14 +1,17 @@
-<h3 mat-dialog-title>Thông tin khách hàng</h3>
+<h3 mat-dialog-title>
+  Thông tin khách hàng
+  <mat-icon class="icon close" (click)="close()">clear</mat-icon>
+</h3>  
 <div mat-dialog-content>
   <div class="ui grid">
     <div class="sixteen wide column">
       <mat-form-field>
-        <input matInput placeholder="Tên khách hàng" [(ngModel)]="customer.name" required/>
+        <input matInput placeholder="Tên khách hàng" [(ngModel)]="customer.name" required />
       </mat-form-field>
     </div>
     <div class="sixteen wide column">
       <mat-form-field>
-        <input matInput placeholder="Số điện thoại" [(ngModel)]="customer.phoneNumber" required/>
+        <input matInput placeholder="Số điện thoại" [(ngModel)]="customer.phone" required />
       </mat-form-field>
     </div>
     <div class="sixteen wide column">
@@ -24,6 +27,5 @@
   </div>
 </div>
 <div mat-dialog-actions>
-  <button mat-flat-button cdkInitialFocus (click)="close()">Hủy (Esc)</button>
-  <button mat-flat-button cdkInitialFocus color="primary" (click)="save()">Lưu (F4)</button>
+  <button mat-flat-button cdkInitialFocus color="primary" (click)="save()">Lưu (F9)</button>
 </div>
