--- a/src/app/customer/components/customer-search/customer-search.component.html
+++ b/src/app/customer/components/customer-search/customer-search.component.html
@@ -1,12 +1,17 @@
 <div class="ui grid">
   <div class="sixteen wide column">
     <mat-form-field>
-      <input #customerNameInput matInput [(ngModel)]="model.name" placeholder="Tên KH" />
+      <input #customerNoInput matInput [(ngModel)]="model.no" placeholder="Mã KH" />
+    </mat-form-field>
+  </div>
+  <div class="sixteen wide column">
+    <mat-form-field>
+      <input matInput [(ngModel)]="model.name" placeholder="Tên KH" />
     </mat-form-field>
   </div>
   <div class="eight wide column">
     <mat-form-field>
-      <input matInput [(ngModel)]="model.phoneNumber" placeholder="Số ĐT" />
+      <input matInput [(ngModel)]="model.phone" placeholder="Số ĐT" />
     </mat-form-field>
   </div>
   <div class="eight wide column">
@@ -21,20 +26,13 @@
     <mat-form-field>
       <input matInput [(ngModel)]="model.email" placeholder="Email" />
     </mat-form-field>
-  </div>
+  </div>  
   <div class="sixteen wide column">
-    <mat-form-field>
-      <input matInput [(ngModel)]="model.address" placeholder="Địa chỉ" />
-    </mat-form-field>
-  </div>
-  <div class="sixteen wide column">
-    <dropdown [options]="[{value: 1, text: 'Hoạt động'},{value: 0, text: 'Không hoạt động'}]"
-              [label]="'Tình trạng'"
-              [(model)]="model.isActive">
-    </dropdown>
+    <div class="sixteen wide column">
+      <mat-checkbox [(ngModel)]="model.includeDeleted">Bao gồm các khách hàng đã xóa</mat-checkbox>
+    </div>
   </div>
   <div class="actions">
-    <button mat-flat-button (click)="doCancel()">Hủy (Esc)</button>
     <button mat-flat-button (click)="doSearch()" color="primary">Tìm (F9)</button>
   </div>
 </div>
