--- a/src/app/retail/components/retail/retail.component.html
+++ b/src/app/retail/components/retail/retail.component.html
@@ -2,13 +2,16 @@
   <toolbar>
     <toolbar-title>Bán lẻ</toolbar-title>
     <actions>
-      <button mat-button (click)="pay()">
-        <mat-icon>attach_money</mat-icon>
+      <button mat-button (click)="new()">
+        <mat-icon>add</mat-icon>
         (F2)
       </button>
+      <button mat-button (click)="pay()">
+        <mat-icon>attach_money</mat-icon>
+        (F4)
+      </button>     
       <button mat-button (click)="addCustomer()">
         <mat-icon>person_add</mat-icon>
-        (F9)
       </button>
       <button mat-button><mat-icon>print</mat-icon></button>
     </actions>
@@ -29,11 +32,12 @@
             (rowClick)="onSelect($event)"
             (select)="onSelect($event)"
             (delete)="onDelete($event)"
+            [isHeaderSticky]="false"
             [showFooter]="true">
       </grid>
     </div>
   </div>  
-  <flyout #flyout [closable]="false" [containerSelector]="'.retail'" (onHide)="onFlyoutHide()">
+  <flyout #flyout [closable]="false" [containerSelector]="'.retail'" (onShow)="onFlyoutShow()" (onHide)="onFlyoutHide()">
     <content>
       <qty-editor #qtyEditor *ngIf="flyoutView == 'qtyEditor'"
                   [item]="selectedItem"
@@ -46,8 +50,5 @@
                (cancel)="flyout.hide()">
       </payment>
     </content>
-  </flyout>
-  <button mat-fab color="accent">
-    <mat-icon>add</mat-icon>
-  </button>
+  </flyout>  
 </div>
