--- a/src/app/widgets/flyout/flyout.component.html
+++ b/src/app/widgets/flyout/flyout.component.html
@@ -6,6 +6,6 @@
      [class.very]="size == 'very thin' || size == 'very wide'"
      [class.thin]="size == 'thin' || size =='very thin'"
      [class.wide]="size == 'wide' || size == 'very wide'">
-  <mat-icon class="close" (click)="hide()">clear</mat-icon>
+  <mat-icon class="icon close" (click)="hide()">clear</mat-icon>
   <ng-content select="content"></ng-content>
 </div>
