More handling for Retail page

--- a/src/app/customer/components/customer-search/customer-search.component.html
+++ b/src/app/customer/components/customer-search/customer-search.component.html
@@ -33,6 +33,7 @@
     </div>
   </div>
   <div class="actions">
+    <button mat-flat-button (click)="clear()">Xóa</button>
     <button mat-flat-button (click)="doSearch()" color="primary">Tìm (F9)</button>
   </div>
 </div>
