--- a/src/app/retail/components/payment/payment.component.html
+++ b/src/app/retail/components/payment/payment.component.html
@@ -26,7 +26,7 @@
     </div>
     <div class="sixteen wide column">
       <mat-form-field>
-        <input matInput placeholder="Tiền mặt" number [(model)]="payment.amount" required>
+        <input matInput placeholder="Tiền mặt" number [(model)]="payment.amount">
       </mat-form-field>
     </div>
     <div class="sixteen wide column">
