--- a/src/app/product/components/product/product.component.html
+++ b/src/app/product/components/product/product.component.html
@@ -12,11 +12,9 @@
     </div>
     <div class="sixteen wide column">
       <mat-form-field>
-        <input matInput placeholder="Tên SP" [(ngModel)]="product.name" required>
-        <mat-error>
-          Vui lòng nhập tên sản phẩm
-        </mat-error>
+        <input matInput placeholder="Tên SP" [(ngModel)]="product.name" required>        
       </mat-form-field>
+      <div class="error" *ngIf="errors.has('name')">{{errors.get('name')}}</div>
     </div>
     <div class="eight wide column">
       <dropdown [(model)]="product.categoryId"
