--- a/src/app/widgets/toolbar/toolbar.component.scss
+++ b/src/app/widgets/toolbar/toolbar.component.scss
@@ -7,13 +7,18 @@
     justify-content: space-between;
     padding: 0 8px !important;
 
+    .left, .right {
+      display: flex;
+      align-items: center;
+    }
+    
     .title {
       color: white;
       font-size: 16px;
     }
 
     .actions {
-      color: white;
+      color: white;     
 
       .mat-button {
         min-width: 48px;
