More handling for Retail page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,10 @@
     <a routerLink="/product" routerLinkActive="active" class="item"><img src="assets/product.svg" /></a>
     <a routerLink="/customer" routerLinkActive="active" class="item"><img src="assets/customer.svg" /></a>
     <a routerLink="/report" routerLinkActive="active" class="item"><img src="assets/report.svg" /></a>
-  </div>
-  <div class="pusher content">
-    <router-outlet></router-outlet>
   </div>  
+  <div class="pusher content">    
+    <router-outlet></router-outlet>
+  </div>
 </div>
+<notifier-container></notifier-container>
 
