--- a/src/app/widgets/product-lookup/product-lookup.component.html
+++ b/src/app/widgets/product-lookup/product-lookup.component.html
@@ -9,7 +9,7 @@
            [direction]="direction"
            (onKeydown)="handleKeydown($event)"
            (onSelect)="handleSelect($event)"
-           [showOnKeyDown]="false"
+           [showOnDown]="false"
            [preventKeys]="['+', '-']"
            (show)="onShow()"
            (hide)="onHide()"
