--- a/src/app/retail/components/qty-editor/qty-editor.component.html
+++ b/src/app/retail/components/qty-editor/qty-editor.component.html
@@ -19,6 +19,6 @@
     </div>
   </div>
   <div class="actions">
-    <button mat-flat-button color="primary" (click)="save()">Lưu (F9)</button>
+    <button mat-flat-button color="primary" (click)="save()">OK (F9)</button>
   </div>
 </div>
