--- a/src/site.scss
+++ b/src/site.scss
@@ -1,8 +1,9 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import "~angular-notifier/styles";
 
 .ui.grid {
-  margin: 0px;  
+  margin: 0px;
 }
 
 .mat-form-field {
