--- a/src/app/retail/components/payment/payment.component.html
+++ b/src/app/retail/components/payment/payment.component.html
@@ -1,30 +1,7 @@
 <div>
   <div class="ui grid">
     <div class="sixteen wide column">
-      <typeahead #customerLookup [options]="customers"
-                 [(model)]="payment.customerId"
-                 (search)="onSearch($event)"
-                 [isLoading]="isLoading"
-                 [valueMember]="'id'"
-                 [displayMember]="'name'"
-                 [label]="'Nhập mã, tên, SĐT hoặc email để tìm khách hàng'"
-                 [floatLabel]="'never'"
-                 [showOnDown]="false"
-                 [requestForOption]="requestForCustomer.bind(this)"
-                 [itemTemplate]="itemTemplate">
-        <ng-template #itemTemplate let-item="item">
-          <div class="customer-dropdown-item">
-            <div class="flex">
-              <label>{{item.name}}</label>
-              <label>{{item.no}}</label>
-            </div>
-            <div class="flex" *ngIf="!!item.phone || !!item.email">
-              <label>{{item.phone}}</label>
-              <label>{{item.email}}</label>
-            </div>            
-          </div>          
-        </ng-template>
-      </typeahead>
+      <customer-lookup [(model)]="payment.customerId"></customer-lookup>
     </div>    
     <div class="sixteen wide column">
       <mat-form-field>
