More handling for Report

--- a/src/app/customer/components/customer-list/customer-list.component.html
+++ b/src/app/customer/components/customer-list/customer-list.component.html
@@ -28,6 +28,7 @@
     <content>
       <customer-search #searchView
                        *ngIf="flyoutView == 'search'"
+                       [model]="searchModel"
                        (search)="onSearch($event)"
                        (cancel)="flyout.hide()">
       </customer-search>
